--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -2,8 +2,10 @@
 <div class="panel panel-info">
     <div class="panel-heading">
     <%= link_to  edit_task_path(task) do %>
-    created <%= time_ago_in_words(task.created_at)%> ago
+      <i class="fa fa-clock-o"></i> created <%= time_ago_in_words(task.created_at)%> ago
         <%end%>
+
+        <%= link_to "<i class='fa fa-times-circle'></i>".html_safe, task_path(task),method: :delete, data: {confirm: "Are you sure?"}, class: "pull-right" %>
      </div>
     <div class="panel-body"><%= task.content %></div>
 
