--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New task</h1>
+<h1 class= "text-center">New task</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', tasks_path %>
+<%= link_to "<i class='fa fa-chevron-circle-left'></i> Back".html_safe, tasks_path %>
